tests/ui/eii/eii-declaration-not-fn-issue-152337.stderr
error[E0428]: the name `A` is defined multiple times
  --> $DIR/eii-declaration-not-fn-issue-152337.rs:8:1
   |
LL | const A: () = ();
   | ----------------- previous definition of the value `A` here
LL | #[eii]
LL | fn A() {}
   | ^^^^^^ `A` redefined here
   |
   = note: `A` must be defined only once in the value namespace of this module

error[E0423]: expected function, found constant `self::A`
  --> $DIR/eii-declaration-not-fn-issue-152337.rs:8:4
   |
LL | fn A() {}
   |    ^ not a function

error[E0423]: expected function, found constant `A`
  --> $DIR/eii-declaration-not-fn-issue-152337.rs:8:4
   |
LL | fn A() {}
   |    ^ not a function

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0423, E0428.
For more information about an error, try `rustc --explain E0423`.
